# pubky-vibes

./: .gitignore  README.md
.github/workflows/: android-apk.yml  portable-homeserver-android.yml  portable-homeserver.yml  pre-release-builds.yml  pubky-swiss-knife.yml
docs/: cross-building.md  milestone-2-unified-pkarr.md  nat-traversal-integration-plan.md
orbital-sovereigns/: Cargo.toml  Dioxus.toml  README.md
orbital-sovereigns/src/: app.rs  lib.rs  main.rs  style.rs
orbital-sovereigns/src/components/: battle.rs  identity.rs  logs.rs  matchmaking.rs  mod.rs  session.rs
orbital-sovereigns/src/models/: arena.rs  battle.rs  identity.rs  match_state.rs  mod.rs  ship.rs
orbital-sovereigns/src/services/: logging.rs  mod.rs  pubky_facade.rs  storage.rs  sync.rs
portable-homeserver/: .gitignore  Cargo.toml  Dioxus.toml  README.md
portable-homeserver/assets/: app.css  mobile.js
portable-homeserver/assets/android/app/src/main/: AndroidManifest.xml
portable-homeserver/assets/android/app/src/main/kotlin/dev/dioxus/main/: Ipc.kt  RustWebView.kt  RustWebViewClient.kt  WryActivity.kt
portable-homeserver/docs/: ARCHITECTURE.md  android-plan.md
portable-homeserver/scripts/: patch_android_manifest.py
portable-homeserver/src/: lib.rs  main.rs
portable-homeserver/src/app/: admin.rs  android.rs  android_fs.rs  bootstrap.rs  config.rs  logs.rs  mobile.rs  mod.rs  platform.rs  state.rs  status.rs  style.rs  tasks.rs  ui.rs
pubky-swiss-knife/: Cargo.toml  Dioxus.toml  README.md  build.rs
pubky-swiss-knife/.cargo/: config.toml
pubky-swiss-knife/.github/workflows/: android-apk.yml
pubky-swiss-knife/assets/: mobile.js  style.css
pubky-swiss-knife/docs/: android-plan.md  android-troubleshooting.md
pubky-swiss-knife/src/: app.rs  lib.rs  main.rs  style.rs
pubky-swiss-knife/src/components/: mod.rs
pubky-swiss-knife/src/tabs/: auth.rs  http.rs  keys.rs  mod.rs  pkdns.rs  sessions.rs  social.rs  state.rs  storage.rs  tokens.rs
pubky-swiss-knife/src/utils/: file_dialog.rs  file_picker.rs  http.rs  iroh.rs  links.rs  logging.rs  mobile.rs  mod.rs  pubky.rs  qr.rs  recovery.rs  requests.rs  settings.rs  transport.rs
