[package]
name = "portable-homeserver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
directories = "6"
mimalloc = "0.1"
pubky-homeserver = "0.6.0-rc.6"
pubky-testnet = "0.6.0-rc.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "time"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(target_os = "android"))'.dependencies]
dioxus = { version = "0.7.0-rc.1", features = ["desktop", "mobile"] }
dioxus-desktop = "0.7.0-rc.1"

[target.'cfg(target_os = "android")'.dependencies]
dioxus = { version = "0.7.0-rc.1", features = ["mobile"] }
ndk = "0.9"
ndk-glue = { version = "0.7", default-features = false }
